feat: work on docs

--- a/docs/src/content/docs/get-started/pick-a-template.mdx
+++ b/docs/src/content/docs/get-started/pick-a-template.mdx
@@ -2,4 +2,8 @@
 title: Pick a template
 ---
 
-lorem ipsum
+There is currently 1 available template (more to come):
+
+- [Manual (AIK)](/templates/manual-kit/): it uses a manual release script and ships with [Astro Integration Kit](https://astro-integration-kit.netlify.app/)
+
+All templates are structured as a monorepo with the package and a playground to easily test manually features.
