--- a/docs/src/content/docs/get-started/prerequisites.mdx
+++ b/docs/src/content/docs/get-started/prerequisites.mdx
@@ -2,4 +2,4 @@
 title: Prerequisites
 ---
 
-lorem ipsum
+All available templates use [pnpm](https://pnpm.io/) as their package manager, and require at least [Node](https://nodejs.org/en) `18.20.3`.
