--- a/docs/src/content/docs/templates/github-kit.mdx
+++ b/docs/src/content/docs/templates/github-kit.mdx
@@ -28,11 +28,13 @@ Store the token as a GitHub secret named `NPM_TOKEN` in your repository. To do t
 
 2. Update all occurrences of `package-name` with your package name.
 
-3. Add a `LICENSE` at the root (if you do it through GitHub interface, you'll be able to see all licenses and pick the best one for your project).
+3. Update .github/release.yml with your organization's repository name (org/repo-name).
 
-4. Pick the right NPM tags, see [official docs](https://docs.astro.build/en/reference/publish-to-npm/#categories).
+4. Add a `LICENSE` at the root (if you do it through GitHub interface, you'll be able to see all licenses and pick the best one for your project).
 
-5. Setup your GitHub repository.
+5. Pick the right NPM tags, see [official docs](https://docs.astro.build/en/reference/publish-to-npm/#categories).
+
+6. Setup your GitHub repository.
 
 </Steps>
 
