--- a/docs/src/content/docs/templates/github-kit.mdx
+++ b/docs/src/content/docs/templates/github-kit.mdx
@@ -22,7 +22,7 @@ Make sure you have a GitHub and NPM account.
 
 2. Update all occurrences of `package-name` with your package name.
 
-3. Update .github/release.yml with your organization's repository name (org/repo-name).
+3. Update .changeset/config.json with your organization's repository name (org/repo-name).
 
 4. Add a `LICENSE` at the root (if you do it through GitHub interface, you'll be able to see all licenses and pick the best one for your project).
 
